--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,29 @@
 /* You'll probably want to add some styles here */
+
+@import url(https://fonts.googleapis.com/css?family=Raleway:300);
+
+body {
+	background-color: #2D2D2D;
+}
+
+main {
+	vertical-align: center;
+	margin: auto;
+
+}
+
+h1, h2, h3, h4, h5, p {
+	text-align: center;
+	font-family: 'Raleway', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+	color: #FFFFFF;
+}
+
+p {
+	color: #FF9933;
+}
+#container {
+	margin: auto;
+}
