--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,12 @@ h1, h2, h3, h4, h5, p {
 	font-family: 'Raleway', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4 {
 	color: #FFFFFF;
+}
+
+h5 {
+	color: #858585;
 }
 
 p {
@@ -26,4 +30,22 @@ p {
 }
 #container {
 	margin: auto;
+}
+
+a:link {
+    color: #00FF00;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #00FF00;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #00FF00;
+}
+
+input:focus {
+    color: #00FF00;
 }
